gnutls26 (2.9.12-2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Andreas Metzler <ametzler@debian.org>  Thu, 17 Jun 2010 19:35:27 +0200

gnutls26 (2.9.12-1) experimental; urgency=low

  * New upstream version.

 -- Andreas Metzler <ametzler@debian.org>  Thu, 17 Jun 2010 19:20:04 +0200

gnutls26 (2.9.11-1) experimental; urgency=low

  * New upstream version.
  * Drop 15_gnutlspriority.diff, superseded.

 -- Andreas Metzler <ametzler@debian.org>  Mon, 07 Jun 2010 19:36:33 +0200

gnutls26 (2.9.10-2) experimental; urgency=low

  * [15_gnutlspriority.diff] Restore compatibility with programs using 
    gnutls_*_set_priority() instead of gnutls_priority_*(), e.g. exim.
    Closes: #579831

 -- Andreas Metzler <ametzler@debian.org>  Thu, 27 May 2010 18:40:53 +0200

gnutls26 (2.9.10-1) experimental; urgency=low

  * New upstream version.
  * New functions added, bump shlibs.

 -- Andreas Metzler <ametzler@debian.org>  Thu, 22 Apr 2010 19:29:52 +0200

gnutls26 (2.9.9-1) experimental; urgency=low

  * Package upstream development branch for experimental.
  * Track development versions in watchfile.
  * Package C++ wrapper again. Closes: #548637

 -- Andreas Metzler <ametzler@debian.org>  Sun, 20 Dec 2009 11:31:33 +0100

gnutls26 (2.8.6-1) unstable; urgency=low

  * Use dh_lintian.
  * Use dh_makeshlibs for the guile stuff, too. This gets us 
    a) ldconfig in postinst. Closes: #553109
    and
    b) a shlibs file.
    However the shared objects /usr/lib/libguile-gnutls*so* are still not
    designed to be used as libraries (linking) but are dlopened. guile-1.10
    will address this issue by keeping this stuff in a private directory.
  * hotfix pkg-config files (proper fix to be included upstream).
  * Stop unneeeded linkage against libgpg-error. 16_unnecessarydep.diff

 -- Andreas Metzler <ametzler@debian.org>  Sat, 20 Mar 2010 15:53:35 +0100

gnutls26 (2.8.5-2) unstable; urgency=low

  * Add a huge bunch of lintian overrides for the guile stuff to make dak