@@ -1,17 +1,29 @@
 #! /usr/bin/make -f
 # Build the gnutls package for Debian.
 
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/autotools.mk
+
 CFLAGS += -D_REENTRANT
 ifeq ($(DEB_BUILD_ARCH),hppa)
 	CFLAGS += -fno-gcse
 endif
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+# work around gcc-4.4 bug <http://bugs.debian.org/519006> by building without -g
+ifeq ($(DEB_BUILD_ARCH),mips)
+	WORAROUND519006 := yes
+	export CFLAGS := -O2 -Wall -D_REENTRANT
+endif
+ifeq ($(DEB_BUILD_ARCH),mipsel)
+	WORAROUND519006 := yes
+	export CFLAGS := -O2 -Wall -D_REENTRANT
+endif
 
 DEB_CONFIGURE_EXTRA_FLAGS = --enable-ld-version-script --enable-cxx --without-lzo --enable-guile --with-guile-site-dir=/usr/share/guile/site --cache-file=$(CURDIR)/config.cache
 DEB_MAKE_CHECK_TARGET = check
-DEB_DH_STRIP_ARGS = --dbg-package=libgnutls26-dbg
+ifneq ($(WORAROUND519006),yes)
+	DEB_DH_STRIP_ARGS = --dbg-package=libgnutls26-dbg
+endif
 DEB_DH_MAKESHLIBS_ARGS_libgnutls26 := -V 'libgnutls26 (>=2.9.11-0)'
 DEB_DH_MAKESHLIBS_ARGS_guile-gnutls := -V 'guile-gnutls (>=2.7.14-0)'
 DEB_COMPRESS_EXCLUDE := gnutls.pdf
