@@ -1,6 +1,9 @@
 gnutls26 (2.9.12-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Work around gcc-4.4 bug <http://bugs.debian.org/519006> by building
+    without -g on mips/mipsel. (As a side effect this makes libgnutls26-dbg a
+    useless and almost empty package on these archs.)
 
  -- Andreas Metzler <ametzler@debian.org>  Thu, 17 Jun 2010 19:35:27 +0200
 
